MVP: Completed Day 2

--- a/Journal: Core Data/Journal: Core Data/Views/Base.lproj/Main.storyboard
+++ b/Journal: Core Data/Journal: Core Data/Views/Base.lproj/Main.storyboard
@@ -105,6 +105,7 @@
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mood" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NDg-DO-QCs">
                                                     <rect key="frame" x="0.0" y="21.5" width="327" height="20.5"/>
+                                                    <color key="backgroundColor" red="0.3761742347" green="1" blue="0.98990605089999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -124,11 +125,14 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="NDg-DO-QCs" firstAttribute="leading" secondItem="HH7-tC-Aq6" secondAttribute="leading" id="Agi-oh-L3A"/>
+                                                <constraint firstItem="aYM-zm-ILP" firstAttribute="height" secondItem="dfQ-sC-fF0" secondAttribute="height" id="BSk-aH-rEC"/>
                                                 <constraint firstAttribute="trailing" secondItem="dfQ-sC-fF0" secondAttribute="trailing" id="GNC-Ao-xT6"/>
                                                 <constraint firstAttribute="trailing" secondItem="aYM-zm-ILP" secondAttribute="trailing" id="LEd-Os-7iH"/>
+                                                <constraint firstItem="NDg-DO-QCs" firstAttribute="height" secondItem="UEC-ZH-eUQ" secondAttribute="height" id="MEY-WY-zBV"/>
                                                 <constraint firstAttribute="trailing" secondItem="NDg-DO-QCs" secondAttribute="trailing" id="PVp-LF-2bu"/>
                                                 <constraint firstItem="UEC-ZH-eUQ" firstAttribute="leading" secondItem="HH7-tC-Aq6" secondAttribute="leading" id="Tr4-tz-FOV"/>
                                                 <constraint firstItem="dfQ-sC-fF0" firstAttribute="leading" secondItem="HH7-tC-Aq6" secondAttribute="leading" id="Txi-SH-Rsl"/>
+                                                <constraint firstItem="dfQ-sC-fF0" firstAttribute="height" secondItem="NDg-DO-QCs" secondAttribute="height" id="nbR-I6-lHJ"/>
                                                 <constraint firstAttribute="trailing" secondItem="UEC-ZH-eUQ" secondAttribute="trailing" id="oTz-hC-VSV"/>
                                                 <constraint firstItem="aYM-zm-ILP" firstAttribute="leading" secondItem="HH7-tC-Aq6" secondAttribute="leading" id="sD8-9H-IRO"/>
                                             </constraints>
