Add controller and all its methods. Also CRUD functions.

--- a/JournalCoreData/JournalCoreData/Base.lproj/Main.storyboard
+++ b/JournalCoreData/JournalCoreData/Base.lproj/Main.storyboard
@@ -70,7 +70,7 @@
                                     <outlet property="dateLabel" destination="Jgu-Yl-HcW" id="01F-3w-vk6"/>
                                     <outlet property="descriptionLabel" destination="gY2-Nc-5Uh" id="1LT-Xc-yZX"/>
                                     <outlet property="titleLabel" destination="fnW-XU-sn2" id="QRR-ht-nrs"/>
-                                    <segue destination="BYZ-38-t0r" kind="show" identifier="toDetailVC" id="4ay-Rc-JMa"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" identifier="showDetailVC" id="4ay-Rc-JMa"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
